fixed gap between companie cards

--- a/stylesheets/coworking-style.css
+++ b/stylesheets/coworking-style.css
@@ -938,7 +938,7 @@ body {
     .collab-companies-cards {
         flex-direction: column;
         margin: 10px 0 0 0;
-        gap: 0.5rem;
+        gap: 1.5rem;
     }
     .collab-card-container {
         background-color: var(--white-color);
